tests/test_io/bad/redefining_input.catala_en
# Test

```catala
declaration scope A:
  input a content integer

scope A:
  definition a equals 0
```